complete to use of permissions to worklogs.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -187,3 +187,4 @@ jttp.future.log.notification.help=You can turn on/off the notification of future
 jttp-warning.future.log.title=Attention!
 jttp-warning.future.log.message=The work was logged at a future date.
 
+jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
