add worklog visibility filter to timetracker, table, chart pages queryries

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -188,3 +188,4 @@ jttp-warning.future.log.title=Attention!
 jttp-warning.future.log.message=The work was logged at a future date.
 
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
+jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
