Add issue summary to wokrlog table. Add the option in the user settings to change the issue summary or issue key visibility in JTTP worklog table.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -72,6 +72,7 @@ plugin.progress.nonWork=Non-work
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue Type
 plugin.jttp-worklog-issue-key= Issue
+plugin.jttp-worklog-issue-summary=Issue summary
 plugin.jttp-worklog-start= Start
 plugin.jttp-worklog-end= End
 plugin.jttp-worklog-actions= Actions
@@ -131,6 +132,10 @@ plugin.setting.timetracker.permission.desc=By default all users have permission 
 plugin.setting.worklog.data.appearance=Worklog data appearance
 plugin.setting.rounded.remaining=Displays rounded Remaining time
 plugin.setting.rounded.remaining.help=You can turn on/off the remaining time rounding.
+plugin.setting.issue.display.type=Issue display type
+plugin.setting.issue.display.type.issue.key=Issue Key
+plugin.setting.issue.display.type.issue.summary=Issue Summary
+plugin.setting.issue.display.type.help=You can choose whether you want to display the Issue Summary or the Issue Key.
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
