--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -72,6 +72,7 @@ plugin.progress.nonWork=Nem val\u00f3s munka
 plugin.jttp-worklog-issue-type= T
 plugin.jttp-worklog-issue-type.tooltip= Issue T\u00edpus
 plugin.jttp-worklog-issue-key= Issue
+plugin.jttp-worklog-issue-summary=Issue summary
 plugin.jttp-worklog-start= Kezd\u00e9s
 plugin.jttp-worklog-end= V\u00e9ge
 plugin.jttp-worklog-actions= M\u0171veletek
@@ -131,6 +132,10 @@ plugin.setting.timetracker.permission.desc=Alap\u00e9rtelmezetten minden felhasz
 plugin.setting.worklog.data.appearance=A worklog adatok megjelen\u00e9se
 plugin.setting.rounded.remaining=A fennmarad\u00f3 id\u0151 kerek\u00edt\u00e9se
 plugin.setting.rounded.remaining.help=Be \u00e9s ki kapcsolhatod a fennmarad\u00f3 id\u0151 kerek\u00edt\u00e9s\u00e9t.
+plugin.setting.issue.display.type=Issue megjelen\u00edt\u00e9s
+plugin.setting.issue.display.type.issue.key=Issue kulcs
+plugin.setting.issue.display.type.issue.summary=Issue n\u00e9v
+plugin.setting.issue.display.type.help=Kiv\u00e1laszthatod, hogy az Issue nev\u00e9t vagy a kulcsot akarod megjelen\u00edteni.
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint az elv\u00e1rt munkaid\u0151 egy napra.
