update properties files

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -28,7 +28,7 @@ jtrp.plugin.reporting.popup.check=Show reporting pop-ups
 jtrp.plugin.reporting.popup.check.desc=Uncheck this to show the tutorial/what's new pop-ups when you open reporting. Note that this setting may change after version update to make sure you get notified of the new features
 jtrp.plugin.reporting.time.format=Logged Time export format
 jtrp.plugin.reporting.time.format.sec=Seconds
-jtrp.plugin.reporting.time.format.def=Default (w/d/h/m)
+jtrp.plugin.reporting.time.format.def=Default
 jtrp.plugin.reporting.time.format.desc=Select the time format that appears in the exported reports.
 
 plugin.invalid_startTime= Invalid Start Time!
