--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -132,7 +132,7 @@ plugin.setting.timetracker.permission=Permission to use Timetracker
 plugin.setting.timetracker.permission.desc=By default all users have permission to view and use Timetracker's time tacking functionality. If you would like to restrict usability, you can add JIRA groups here that have permits to use Timetracker.
 plugin.setting.worklog.data.appearance=Worklog data appearance
 plugin.setting.rounded.remaining=Displays rounded Remaining time
-plugin.setting.rounded.remaining.help=You can turn on/off the remaining time rounding.
+plugin.setting.rounded.remaining.help=You can turn on/off the remaining time rounding. The rounding will be applied only in pretty format.
 plugin.setting.issue.display.type=Issue display type
 plugin.setting.issue.display.type.issue.key=Issue Key
 plugin.setting.issue.display.type.issue.summary=Issue Summary
