--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -28,7 +28,7 @@ jtrp.plugin.reporting.popup.check=Reporting pop-up megjenel\u00edt\u00e9se
 jtrp.plugin.reporting.popup.check.desc=Ne jel\u00f6lje (pip\u00e1lja) be, ha azt szeretn\u00e9, hogy a reporting megnyit\u00e1sakor az \u00fajdons\u00e1gokat bemutat\u00f3 pop-up megjelenjen.
 jtrp.plugin.reporting.time.format=A k\u00f6nyvelt id\u0151 form\u00e1tuma export\u00e1l\u00e1skor
 jtrp.plugin.reporting.time.format.sec=M\u00e1sodperc
-jtrp.plugin.reporting.time.format.def=Alap\u00e9rtelmezett (w/d/h/m)
+jtrp.plugin.reporting.time.format.def=Alap\u00e9rtelmezett
 jtrp.plugin.reporting.time.format.desc=V\u00e1lassza ki az id\u0151 form\u00e1tum\u00e1t az export\u00e1lt reportokban.
 
 plugin.invalid_startTime= Invalid Start Time!
