--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -132,7 +132,7 @@ plugin.setting.timetracker.permission=Timetracker haszn\u00e1lat\u00e1nak enged\
 plugin.setting.timetracker.permission.desc=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3 l\u00e1thatja \u00e9s haszn\u00e1lhatja a Timetracker funkci\u00f3t. JIRA csoportok megad\u00e1s\u00e1val korl\u00e1tozhat\u00f3 a l\u00e1that\u00f3s\u00e1g \u00e9s haszn\u00e1lhat\u00f3s\u00e1g a csoporttagok sz\u00e1m\u00e1ra.
 plugin.setting.worklog.data.appearance=A worklog adatok megjelen\u00e9se
 plugin.setting.rounded.remaining=A fennmarad\u00f3 id\u0151 kerek\u00edt\u00e9se
-plugin.setting.rounded.remaining.help=Be \u00e9s ki kapcsolhatod a fennmarad\u00f3 id\u0151 kerek\u00edt\u00e9s\u00e9t.
+plugin.setting.rounded.remaining.help=Be \u00e9s ki kapcsolhatod a fennmarad\u00f3 id\u0151 kerek\u00edt\u00e9s\u00e9t. A kerek\u00edt\u00e9s csak a pretty form\u00e1tumban lesz alkalmazva.
 plugin.setting.issue.display.type=Issue megjelen\u00edt\u00e9s
 plugin.setting.issue.display.type.issue.key=Issue kulcs
 plugin.setting.issue.display.type.issue.summary=Issue n\u00e9v
