Add more unit tests. Fix error messages in admin settings.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -141,6 +141,7 @@ plugin.setting.issue.display.type.issue.key=Issue Key
 plugin.setting.issue.display.type.issue.summary=Issue Summary
 plugin.setting.issue.display.type.help=You can choose whether you want to display the Issue Summary or the Issue Key.
 plugin.setting.date.already.exists=Date already exists:
+plugin.setting.date.exitst.include.exclude=The date(s) exists in include and exclude dates too:
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to the time is expected a day.
