--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -141,6 +141,7 @@ plugin.setting.issue.display.type.issue.key=Issue kulcs
 plugin.setting.issue.display.type.issue.summary=Issue n\u00e9v
 plugin.setting.issue.display.type.help=Kiv\u00e1laszthatod, hogy az Issue nev\u00e9t vagy a kulcsot akarod megjelen\u00edteni.
 plugin.setting.date.already.exists=A d\u00e1tum m\u00e1r hozz\u00e1ad\u00e1sra ker\u00fclt:
+plugin.setting.date.exitst.include.exclude=A k\u00f6vetkez\u0151 d\u00e1tumok a bele sz\u00e1m\u00edt\u00f3 \u00e9s a nem bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok k\u00f6z\u00f6tt is szerepel:
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint az elv\u00e1rt munkaid\u0151 egy napra.
