--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -163,10 +163,10 @@ jtrp.report.btn.create.report=Create Report
 jtrp.report.btn.columns=Columns
 
 jtrp.report.btn.export=Export
-jtrp.report.btn.export.excel.all=(Excel) All fields
-jtrp.report.btn.export.excel.current=(Excel) Current Fields
-jtrp.report.btn.export.csv.all=(CSV) All fields
-jtrp.report.btn.export.csv.current=(CSV) Current Fields
+jtrp.report.btn.export.excel.all=(Excel) All columns
+jtrp.report.btn.export.excel.current=(Excel) Current columns
+jtrp.report.btn.export.csv.all=(CSV) All columns
+jtrp.report.btn.export.csv.current=(CSV) Current columns
 
 jtrp.report.btn.summary.export.csv=(CSV) Export
 jtrp.report.btn.summary.export.excel=(Excel) Export
