--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -163,10 +163,10 @@ jtrp.report.btn.create.report=Riport k\u00e9sz\u00edt\u00e9s
 jtrp.report.btn.columns=Oszlopok
 
 jtrp.report.btn.export=Export
-jtrp.report.btn.export.excel.all=(Excel) Minden mez\u0151
-jtrp.report.btn.export.excel.current=(Excel) Jelenlegi mez\u0151k
-jtrp.report.btn.export.csv.all=(CSV) Minden mez\u0151
-jtrp.report.btn.export.csv.current=(CSV) Jelenlegi mez\u0151k
+jtrp.report.btn.export.excel.all=(Excel) Minden oszlop
+jtrp.report.btn.export.excel.current=(Excel) Jelenlegi oszlopok
+jtrp.report.btn.export.csv.all=(CSV) Minden oszlop
+jtrp.report.btn.export.csv.current=(CSV) Jelenlegi oszlopok
 
 jtrp.report.btn.summary.export.csv=(CSV) Export
 jtrp.report.btn.summary.export.excel=(Excel) Export
