v2.x-JIRAPLUGIN-422-RC_FIX
* edit action order fixed
* tooltips on Timetracker page fixed

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -20,7 +20,7 @@ plugin.week= Week
 plugin.day= Day
 plugin.date= Date
 plugin.edit= Edit
-plugin.edit.all=Change Date For All
+plugin.edit.all=Move all
 plugin.save= Save
 plugin.settings= Settings
 plugin.delete= Delete
@@ -79,7 +79,7 @@ plugin.jttp-worklog-actions= Actions
 plugin.jttp-worklog-duration= Duration
 plugin.jttp-worklog-issue-remaining= Remaining
 plugin.jttp-worklog-description= Description
-plugin.jttp-worklog-change-date-for-all=Select the date to which you want to move the logs.
+plugin.jttp-worklog-change-date-for-all=Move all the worklogs to a particular day
 
 plugin.summary.real= Real Work
 plugin.summary.total= Total
