--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -20,7 +20,7 @@ plugin.week= H\u00e9t
 plugin.day= Nap
 plugin.date= D\u00e1tum
 plugin.edit= Szerkeszt\u00e9s
-plugin.edit.all=\u00d6sszes D\u00e1tum Szerkeszt\u00e9se
+plugin.edit.all=\u00d6sszes mozgat\u00e1sa
 plugin.save= Ment\u00e9s
 plugin.settings= Be\u00e1ll\u00edt\u00e1sok
 plugin.delete= T\u00f6rl\u00e9s
@@ -79,7 +79,7 @@ plugin.jttp-worklog-actions= M\u0171veletek
 plugin.jttp-worklog-duration= Id\u0151tartam
 plugin.jttp-worklog-issue-remaining= H\u00e1travan
 plugin.jttp-worklog-description= Jegyzet
-plugin.jttp-worklog-change-date-for-all=V\u00e1lassza ki a d\u00e1tumot, ahova \u00e1t akarja mozgatni a logokat.
+plugin.jttp-worklog-change-date-for-all=\u00d6sszes worklog mozgat\u00e1sa m\u00e1s napra.
 
 plugin.summary.real= Val\u00f3s Munka
 plugin.summary.total= Teljes
