v2.x-JIRAPLUGIN-412-UPDATE_POPUP
Uopdated reporting popup.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -213,7 +213,6 @@ jtrp.select.report=Select report
 jtrp.picker.user.tooltip=Select users, or the none option to select from groups.
 jtrp.picker.group.tooltip=Select groups, or the none option to select from users.
 
-
 jtrp.picker.more.issue=Issue
 jtrp.picker.more.priority=Priority
 jtrp.picker.more.resulution=Resolution
@@ -230,14 +229,17 @@ jtrp.picker.more.epic.link=Epic Link
 jtrp.tutorial.header=Timetracker feature tutorial
 jtrp.tutorial.close=Close
 jtrp.tutorial.dns.label=Do not show again
-jtrp.tutorial.tab.header.1=NEW design to experience better look and feel
-jtrp.tutorial.tab.header.2=NEW: Reporting pages reorganization
-jtrp.tutorial.tab.header.3=NEW: Daily and Summary progress indicator
-jtrp.tutorial.tab.header.4=NEW: Permission settings
-jtrp.tutorial.tab.text.1=Now Timetracker adopts the Atlassian design guidelines and it is built with the Atlassian UI framework (AUI), so we can provide a consistent appearance for the users. We re-drawn all pages of the Timetracker. Hope you''ll like it!
-jtrp.tutorial.tab.text.2=We reorganized all of the reporting pages under the Reporting menu. Now you can acces the Reporting, Table report, Chart report and Missing days report from the submenu on these pages, and reporting permissions apply to all of them.
-jtrp.tutorial.tab.text.3=We added two indicator to the Timetracker to provide you instant visual feedback about your progress. You can switch between a simple daily indicator or the new summary indicator that displays the same information as the old summary table.
-jtrp.tutorial.tab.text.4=By default all users have permission to view and use Timetracker & Reporting Plugin. Now your Administrator can add groups if you want to restrict this functionality.
+jtrp.tutorial.tab.header.1=NEW: Issue Summary or Issue Key on the Timetracker screen
+jtrp.tutorial.tab.header.2=NEW: Timetracker now adapts the JIRA time format
+jtrp.tutorial.tab.header.3=NEW: Export in different time format
+jtrp.tutorial.tab.header.4=NEW: Export Worklogs to CSV
+jtrp.tutorial.tab.header.5=NEW: Future work logging notification
+jtrp.tutorial.tab.text.1=You can now choose whether you want to display the Issue Summary or the Issue Key on the Timetracker screen.
+jtrp.tutorial.tab.text.2=Time spent, Duration and Remaining will be displayed as it has been set in the Time Tracking settings.</br></br>You can now log work in 12-hour clock format on the Timetracker screen.
+jtrp.tutorial.tab.text.3=Select the time format that appears in the exported reports. You can export worklog time data in seconds or in the actual (displayed) format.
+jtrp.tutorial.tab.text.4=You can now export reporting details or summary in CSV format.
+jtrp.tutorial.tab.text.5=We added a feature that notifies you if you logged work in the future. You can turn it on or off in the Timetracker user settings.
+
 
 ##Missings Days report
 plugin.missings.hours=Hours
