add remaining estimate choose

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -198,3 +198,12 @@ jttp-warning.future.log.message=The work was logged at a future date.
 
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
 jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
+
+plugin.setting.remainingestimate.options=Show Remaining Estimate options
+plugin.setting.remainingestimate.options.help=The Timetracker Adjust automatically the Remaining Estimate by deafult (the estimate will be reduced by the amount of work done). Check this if you want to display additional Remaining Estimate adjusting options
+plugin.setting.remainingestimatetype.auto=Adjust automatically
+plugin.setting.remainingestimatetype.leave=Use existing estimate
+plugin.setting.remainingestimatetype.new=Set to
+plugin.setting.remainingestimatetype.manual=Reduce by
+plugin.setting.remainingestimatetype.new.tooltip=(eg. 3w 4d 12h)
+plugin.setting.remainingestimatetype.manual.tooltip=(eg. 3w 4d 12h)
