fixed design and properties value

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -201,9 +201,10 @@ jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view
 
 plugin.setting.remainingestimate.options=Show Remaining Estimate options
 plugin.setting.remainingestimate.options.help=The Timetracker Adjust automatically the Remaining Estimate by deafult (the estimate will be reduced by the amount of work done). Check this if you want to display additional Remaining Estimate adjusting options
-plugin.setting.remainingestimatetype.auto=Adjust automatically
-plugin.setting.remainingestimatetype.leave=Use existing estimate
-plugin.setting.remainingestimatetype.new=Set to
-plugin.setting.remainingestimatetype.manual=Reduce by
-plugin.setting.remainingestimatetype.new.tooltip=(eg. 3w 4d 12h)
-plugin.setting.remainingestimatetype.manual.tooltip=(eg. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.auto=Adjust automatically
+plugin.jttp.remainingestimatetype.leave=Use existing estimate
+plugin.jttp.remainingestimatetype.new=Set to
+plugin.jttp.remainingestimatetype.manual=Reduce by
+plugin.jttp.remainingestimatetype.new.tooltip=(eg. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.manual.tooltip=(eg. 3w 4d 12h)
+plugin.jttp.remainingestimate=Remaining estimate
