--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -202,9 +202,10 @@ jttp.warning.no.permission.to.all.worklogs=Nincs jogod l\u00e1tni minden k\u00f6
 
 plugin.setting.remainingestimate.options=Fennmarad\u00f3 becs\u00fclt id\u0151 opci\u00f3k mutat\u00e1sa
 plugin.setting.remainingestimate.options.help=A Timetracker alap\u00e9rtelmezetten automatikusan be\u00e1ll\u00edtja a fennmarad\u00f3 becs\u00fclt id\u0151t (a becsl\u00e9s ideje az elv\u00e9gzett munka idej\u00e9vel lesz cs\u00f6kkentve). Jel\u00f6ld be ezt az opci\u00f3t, ha meg szeretn\u00e9l jelen\u00edteni tov\u00e1bbi be\u00e1ll\u00edt\u00e1si lehet\u0151s\u00e9geket a fennmarad\u00f3 becs\u00fclt id\u0151h\u00f6z.
-plugin.setting.remainingestimatetype.auto=Adjust automatically
-plugin.setting.remainingestimatetype.leave=Use existing estimate
-plugin.setting.remainingestimatetype.new=Set to
-plugin.setting.remainingestimatetype.manual=Reduce by
-plugin.setting.remainingestimatetype.new.tooltip=(eg. 3w 4d 12h)
-plugin.setting.remainingestimatetype.manual.tooltip=(eg. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.auto=Automatikus be\u00e1ll\u00edt\u00e1s
+plugin.jttp.remainingestimatetype.leave=Jelenlegi becsl\u00e9s haszn\u00e1lata
+plugin.jttp.remainingestimatetype.new=Be\u00e1ll\u00edt\u00e1s
+plugin.jttp.remainingestimatetype.manual=Cs\u00f6kkent\u00e9s
+plugin.jttp.remainingestimatetype.new.tooltip=(pl. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.manual.tooltip=(pl. 3w 4d 12h)
+plugin.jttp.remainingestimate=Fennmarad\u00f3 becs\u00fclt id\u0151
