handle not found worklog.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -198,3 +198,5 @@ jttp-warning.future.log.message=The work was logged at a future date.
 
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
 jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
+
+plugin.worklog.not.exists=Worklog not found. Maybe worklog is deleted or you don't have permission to see.
