--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -199,3 +199,5 @@ jttp-warning.future.log.message=A munka egy j\u00f6v\u0151beli d\u00e1tumra lett
 
 jttp.error.moveall.no.permission=Egyes Issue-kon nincs jogod v\u00e9grehajtani a m\u0171veletet.
 jttp.warning.no.permission.to.all.worklogs=Nincs jogod l\u00e1tni minden k\u00f6nyvelt munkaid\u0151det erre a napra. K\u00e9rlek vedd fel a kapcsolatot az adminisztr\u00e1torral.
+
+plugin.worklog.not.exists=A worklog nem tal\u00e1lhat\u00f3. Lehets\u00e9ges hogy t\u00f6r\u00f6lve lett vagy nincs jogosults\u00e1god megtekinteni.
