add delete confirmation popup with remianing estimate.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -205,6 +205,11 @@ plugin.jttp.remainingestimatetype.auto=Adjust automatically
 plugin.jttp.remainingestimatetype.leave=Use existing estimate
 plugin.jttp.remainingestimatetype.new=Set to
 plugin.jttp.remainingestimatetype.manual=Reduce by
-plugin.jttp.remainingestimatetype.new.tooltip=(eg. 3w 4d 12h)
-plugin.jttp.remainingestimatetype.manual.tooltip=(eg. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.new.tooltip=(eg. 2w 1d 1h)
+plugin.jttp.remainingestimatetype.manual.tooltip=(eg. 2w 1d 1h)
 plugin.jttp.remainingestimate=Remaining estimate
+plugin.jttp.remainingestimatetype.manual.increase=Increase estimated time remaining by
+plugin.jttp.remainingestimatetype.manual.increase.tooltip=(eg. 2w 1d 1h)
+plugin.jttp.delete.confirmation.question=Are you sure you want to delete this worklog?
+plugin.jttp.delete.worklog=Delete Worklog
+jttp.delete=Delete
