--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -206,6 +206,11 @@ plugin.jttp.remainingestimatetype.auto=Automatikus be\u00e1ll\u00edt\u00e1s
 plugin.jttp.remainingestimatetype.leave=Jelenlegi becsl\u00e9s haszn\u00e1lata
 plugin.jttp.remainingestimatetype.new=Be\u00e1ll\u00edt\u00e1s
 plugin.jttp.remainingestimatetype.manual=Cs\u00f6kkent\u00e9s
-plugin.jttp.remainingestimatetype.new.tooltip=(pl. 3w 4d 12h)
-plugin.jttp.remainingestimatetype.manual.tooltip=(pl. 3w 4d 12h)
+plugin.jttp.remainingestimatetype.new.tooltip=(pl. 2w 1d 1h)
+plugin.jttp.remainingestimatetype.manual.tooltip=(pl. 2w 1d 1h)
 plugin.jttp.remainingestimate=Fennmarad\u00f3 becs\u00fclt id\u0151
+plugin.jttp.remainingestimatetype.manual.increase=A fennmarad\u00f3 becs\u00fclt id\u0151 n\u0151vel\u00e9se:
+plugin.jttp.remainingestimatetype.manual.increase.tooltip=(pl. 2w 1d 1h)
+plugin.jttp.delete.confirmation.question=Biztos benne, hogy t\u00f6r\u00f6lni k\u00edv\u00e1nja?
+plugin.jttp.delete.worklog=Worklog t\u00f6rl\u00e9s
+jttp.delete=T\u00f6rl\u00e9s
