add end time / duration user settings. JTTP page use this settings.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -198,3 +198,7 @@ jttp-warning.future.log.message=The work was logged at a future date.
 
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
 jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
+
+plugin.setting.active.field=You can choose which field should be active by default
+plugin.setting.active.field.endtime=End Time
+plugin.setting.active.field.duration=Duration
