add the default start time option to user settings.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -199,6 +199,11 @@ jttp-warning.future.log.message=The work was logged at a future date.
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
 jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
 
-plugin.setting.active.field=You can choose which field should be active by default
+plugin.setting.active.field=Default active field
+plugin.setting.active.field.help=You can choose which field should be active by default.
 plugin.setting.active.field.endtime=End Time
 plugin.setting.active.field.duration=Duration
+
+plugin.setting.default.starttime=Default Start Time
+plugin.setting.default.starttime.help=You can set the value of the Start Time.
+plugin.setting.default.starttime.change.wrong=The default start time change value is not correct. Use the valid configured time format:
