add issue summary column to table report

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -207,3 +207,5 @@ plugin.setting.active.field.duration=Duration
 plugin.setting.default.starttime=Default Start Time
 plugin.setting.default.starttime.help=You can set the value of the Start Time.
 plugin.setting.default.starttime.change.wrong=The default start time change value is not correct. Use the valid configured time format:
+
+plugin.issue=Issue
