--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -208,3 +208,5 @@ plugin.setting.active.field.duration=Id\u0151tartam
 plugin.setting.default.starttime=Alap\u00e9rtelmezett kezdeti id\u0151
 plugin.setting.default.starttime.help=\u00c1ll\u00edtsa be a kezdeti id\u0151t.
 plugin.setting.default.starttime.change.wrong=Az Alap\u00e9rtelmezett kezdeti id\u0151 \u00e9rt\u00e9k nem megfelel\u0151. Haszn\u00e1lja a be\u00e1ll\u00edtott id\u0151 form\u00e1tumot:
+
+plugin.issue=Issue
