update error page. Show stacktrace if available. Update properties files (not visisable ' char)

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -132,7 +132,7 @@ plugin.settings.analytics.radiobutton.disable=Disable
 plugin.setting.plugin.permission=Permission to use the Plugin
 plugin.setting.plugin.permission.desc=By default all users have permission to view and use Timetracker & Reporting Plugin. If you would like to restrict usability, you can add JIRA groups here that have permits to use the Plugin.
 plugin.setting.timetracker.permission=Permission to use Timetracker
-plugin.setting.timetracker.permission.desc=By default all users have permission to view and use Timetracker's time tacking functionality. If you would like to restrict usability, you can add JIRA groups here that have permits to use Timetracker.
+plugin.setting.timetracker.permission.desc=By default all users have permission to view and use Timetracker''s time tacking functionality. If you would like to restrict usability, you can add JIRA groups here that have permits to use Timetracker.
 plugin.setting.worklog.data.appearance=Worklog data appearance
 plugin.setting.rounded.remaining=Displays rounded Remaining time
 plugin.setting.rounded.remaining.help=You can turn on/off the remaining time rounding. The rounding will be applied only in pretty format.
@@ -156,14 +156,14 @@ plugin.invalid_durationTime= Invalid Duration Time!
 plugin.invalid_timeInterval= Invalid Time Interval!
 plugin.missing_issue= Missing Issue Parameter!
 plugin.invalid_issue= Wrong Issue:
-plugin.date_parse= Can't parse date:
-plugin.nopermission_issue= You don't have permission to the issue:
+plugin.date_parse= Can''t parse date:
+plugin.nopermission_issue= You don''t have permission to the issue:
 plugin.worklog.create.fail= Unsuccessful worklog creation.
-plugin.worklog.delete.fail= Can't delete worklog with this ID:
+plugin.worklog.delete.fail= Can''t delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
 plugin.wrong.dates= The date parameters of the query are not set appropriate.
 plugin.calendar.logged.coloring.fail= The calendar fail to collect the month logged days.
-plugin.worklog.permission.warning= Maybe there are worklogs matching the conditions but you don't have permission to see them.
+plugin.worklog.permission.warning= Maybe there are worklogs matching the conditions but you don''t have permission to see them.
 plugin.exceeded.year= The maximum queryable period is one year.
 plugin.nopermission_issue.detials=Make sure you have the Work on Issues permission. Check Issue status too. There may be a restriction in the workflow.
 plugin.nonestimated.empty.value=Non-estimated issues cannot be empty.
@@ -182,13 +182,16 @@ jttp.list.title.duration=The time between the start and the end date.
 jttp.list.title.note=Description of the worklog.
 jttp.list.title.actions=Edit, Delete, Copy
 
-jttp.nopermission.worklog.update=You don't have permission to update worklog in the issue:
-jttp.nopermission.worklog.delete=You don't have permission to delete worklog in the issue:
-jttp.nopermission.worklog.create=You don't have permission to create worklog in the issue:
+jttp.nopermission.worklog.update=You don''t have permission to update worklog in the issue:
+jttp.nopermission.worklog.delete=You don''t have permission to delete worklog in the issue:
+jttp.nopermission.worklog.create=You don''t have permission to create worklog in the issue:
 
 jttp.error.title=Timetracker error
 jttp.error.message.title=Something went wrong!
-jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details that are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
+jttp.error.message.detials=Please report this error on the Timetracker feedback form, so we can fix it as quickly as possible.  Details are useful in identifying errors and bugs, so please try to explain how can we reproduce the problem.
+jttp.error.message.technical.detials=Technical Details
+jttp.error.show.less=Show less
+jttp.error.show.more=Show more
 
 jttp.future.log.notification=Notifications
 jttp.future.log.notification.title=Notification of future work logging
@@ -197,7 +200,7 @@ jttp-warning.future.log.title=Attention!
 jttp-warning.future.log.message=The work was logged at a future date.
 
 jttp.error.moveall.no.permission=You are not allowed perform this action on each Issue.
-jttp.warning.no.permission.to.all.worklogs=You don't have the permission to view all of your worklogs on this day. Please contact your administrator.
+jttp.warning.no.permission.to.all.worklogs=You don''t have the permission to view all of your worklogs on this day. Please contact your administrator.
 
 plugin.setting.active.field=Default active field
 plugin.setting.active.field.help=You can choose which field should be active by default.
@@ -225,4 +228,4 @@ plugin.jttp.delete.confirmation.question=Are you sure you want to delete this wo
 plugin.jttp.delete.worklog=Delete Worklog
 jttp.delete=Delete
 
-plugin.worklog.not.exists=Worklog not found. Maybe worklog is deleted or you don't have permission to see.
+plugin.worklog.not.exists=Worklog not found. Maybe worklog is deleted or you don''t have permission to see.
