--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -190,6 +190,9 @@ jttp.nopermission.worklog.create=Nincs jogosults\u00e1god worklogot l\u00e9treho
 jttp.error.title=Timetracker error
 jttp.error.message.title=Sajn\u00e1latos m\u00f3don hiba t\u00f6rt\u00e9nt!
 jttp.error.message.detials=K\u00e9rem jelezze a hib\u00e1t sz\u00e1munkra a Timetracker felhaszn\u00e1l\u00f3i visszajelz\u00e9s funcki\u00f3j\u00e1val, hogy azt min\u00e9l hamarabb jav\u00edthassuk. A visszajelz\u00e9s\u00e9ben \u00edrja le a hiba kiv\u00e1lt\u00e1sa el\u0151tti l\u00e9p\u00e9seket, hogy reproduk\u00e1lni tudjuk azt.
+jttp.error.message.technical.detials=Technikai r\u00e9szletek
+jttp.error.show.less=Mutass kevesebbet
+jttp.error.show.more=Mutass t\u00f6bbet
 
 jttp.future.log.notification=\u00c9rtes\u00edt\u00e9sek
 jttp.future.log.notification.title=\u00c9rtes\u00edt\u00e9s j\u00f6v\u0151beli worklog felv\u00e9ter\u0151l
