show installed version in user settings pages.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -229,3 +229,5 @@ plugin.jttp.delete.worklog=Delete Worklog
 jttp.delete=Delete
 
 plugin.worklog.not.exists=Worklog not found. Maybe worklog is deleted or you don''t have permission to see.
+
+plugin.settings.installed.plugin.version=Installed version:
