--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -230,3 +230,5 @@ plugin.jttp.delete.worklog=Worklog t\u00f6rl\u00e9s
 jttp.delete=T\u00f6rl\u00e9s
 
 plugin.worklog.not.exists=A worklog nem tal\u00e1lhat\u00f3. Lehets\u00e9ges hogy t\u00f6r\u00f6lve lett vagy nincs jogosults\u00e1god megtekinteni.
+
+plugin.settings.installed.plugin.version=Telep\u00edtett verzi\u00f3:
