--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -107,8 +107,8 @@ plugin.setting.include.dates=Include dates
 plugin.setting.isactualdate.help=You can choose the calendar default date to show. Choose between the current date or the last week first unfilled day.
 plugin.setting.non.working.issues.help=The selected Issues or Issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary". If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
 plugin.setting.nonestimated.issues.help=Here you can choose whether to send an email every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead.
-plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays). The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
-plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
+plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays).
+plugin.setting.include.dates.help=List of days that are weekends yet working days.
 plugin.parse.exception.exclude=Exception while try to parse the exclude date(s). Wrong dates:
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates:
 plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 5, 10, 15, 20, 30.
