v2.x-JIRAPLUGIN-415-TIME_ZONE
* Reporting pageig fix
* Admin settings text's fix

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -129,10 +129,10 @@ plugin.settings.analytics=Analytics
 plugin.settings.analytics.help=In order to enhance the features of the add-on, we need to understand how our customers use Timetracker. To achieve this, we would like to collect anonymous data about the usage: <ul> <li> Anonymized IP address (to be able to create statistics about the usage in the different countries) </li><li> Hash of the domain address of the JIRA system (we will not know your domain address) </li><li> Hash of the user (we will not know your original user id) </li><li> Usage count of the time tracking feature </li><li> Usage count of the Missing Days Report </li><li> Usage count of the Chart Report </li><li> Usage count of the Table Report </li><li> User Agent of the browser being used </li><li> Timetracker version number </li><li> JIRA version number </li></ul>
 plugin.settings.analytics.radiobutton.enable=Enable
 plugin.settings.analytics.radiobutton.disable=Disable
-plugin.settings.timezone=Plugin Time Zone
-plugin.settings.timezone.radiobutton.user=User''s setting
-plugin.settings.timezone.radiobutton.system=System''s setting
-plugin.settings.timezone.help=By default the plugin use the Jira system time zone to show and to store dates. By using the User''s settings the dates will be shown in the user''s time zone. If the user''s settings different from the system time zone then date''s can be may differ. The date''s storage in the system still will be based on the system time zone.
+plugin.settings.timezone=Time Zone
+plugin.settings.timezone.radiobutton.user=User profile setting
+plugin.settings.timezone.radiobutton.system=System setting
+plugin.settings.timezone.help=By default the plugin use the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin. If the user''s settings different from the system time zone then dates can be may differ. The date storage in the system still will be based on the system time zone.
 plugin.setting.plugin.permission=Permission to use the Plugin
 plugin.setting.plugin.permission.desc=By default all users have permission to view and use Timetracker & Reporting Plugin. If you would like to restrict usability, you can add JIRA groups here that have permits to use the Plugin.
 plugin.setting.timetracker.permission=Permission to use Timetracker
