v2.x-JIRAPLUGIN-477-NEWS-POUP
News popup updated.

--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -229,16 +229,12 @@ jtrp.picker.more.epic.link=Epic Link
 jtrp.tutorial.header=Timetracker feature tutorial
 jtrp.tutorial.close=Close
 jtrp.tutorial.dns.label=Do not show again
-jtrp.tutorial.tab.header.1=NEW: Issue Summary or Issue Key on the Timetracker screen
-jtrp.tutorial.tab.header.2=NEW: Timetracker now adapts the JIRA time format
-jtrp.tutorial.tab.header.3=NEW: Export in different time format
-jtrp.tutorial.tab.header.4=NEW: Export Worklogs to CSV
-jtrp.tutorial.tab.header.5=NEW: Future work logging notification
-jtrp.tutorial.tab.text.1=You can now choose whether you want to display the Issue Summary or the Issue Key on the Timetracker screen.
-jtrp.tutorial.tab.text.2=Time spent, Duration and Remaining will be displayed as it has been set in the Time Tracking settings.</br></br>You can now log work in 12-hour clock format on the Timetracker screen.
-jtrp.tutorial.tab.text.3=Select the time format that appears in the exported reports. You can export worklog time data in seconds or in the actual (displayed) format.
-jtrp.tutorial.tab.text.4=You can now export reporting details or summary in CSV format.
-jtrp.tutorial.tab.text.5=We added a feature that notifies you if you logged work in the future. You can turn it on or off in the Timetracker user settings.
+jtrp.tutorial.tab.header.1=Time Zone support
+jtrp.tutorial.tab.header.2=Remaining Estimate options
+jtrp.tutorial.tab.header.3=Additional settings
+jtrp.tutorial.tab.text.1=Now your Administrator can configure the plugin to display date and time according to the user time zone. By default the plugin use the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin.
+jtrp.tutorial.tab.text.2=You can now choose in Timetracker settings whether you want to display additional Remaining Estimate adjusting options. (The Timetracker Adjust automatically the Remaining Estimate by deafult.)
+jtrp.tutorial.tab.text.3=You can choose whether the End Time or Duration field should be active by default.<br/><br/>You can set the default value of the Start Time.
 
 ##Missings Days report
 plugin.missings.hours=Hours
