v2.x-JIRAPLUGIN-480-TIMEZONE_I18N_FIX
* Description fixed.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -132,7 +132,7 @@ plugin.settings.analytics.radiobutton.disable=Disable
 plugin.settings.timezone=Time Zone
 plugin.settings.timezone.radiobutton.user=User profile setting
 plugin.settings.timezone.radiobutton.system=System setting
-plugin.settings.timezone.help=By default the plugin use the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin. If the user''s settings different from the system time zone then dates can be may differ. The date storage in the system still will be based on the system time zone.
+plugin.settings.timezone.help=By default the plugin uses the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin. If the user''s settings differ from the system time zone then dates may differ. The date storage in the system still will be based on the system time zone.
 plugin.setting.plugin.permission=Permission to use the Plugin
 plugin.setting.plugin.permission.desc=By default all users have permission to view and use Timetracker & Reporting Plugin. If you would like to restrict usability, you can add JIRA groups here that have permits to use the Plugin.
 plugin.setting.timetracker.permission=Permission to use Timetracker
