v2.x-JIRAPLUGIN-480-TIMEZON_I18N_FIX
Fixed popup desc.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -232,7 +232,7 @@ jtrp.tutorial.dns.label=Do not show again
 jtrp.tutorial.tab.header.1=Time Zone support
 jtrp.tutorial.tab.header.2=Remaining Estimate options
 jtrp.tutorial.tab.header.3=Additional settings
-jtrp.tutorial.tab.text.1=Now your Administrator can configure the plugin to display date and time according to the user time zone. By default the plugin use the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin.
+jtrp.tutorial.tab.text.1=Now your Administrator can configure the plugin to display date and time according to the user time zone. By default the plugin uses the JIRA system time zone to show and to store dates. By using the User profile setting the dates will be shown in the user''s time zone throughout the plugin. If the user''s settings differ from the system time zone then dates may differ. The date storage in the system still will be based on the system time zone.
 jtrp.tutorial.tab.text.2=You can now choose in Timetracker settings whether you want to display additional Remaining Estimate adjusting options. (The Timetracker Adjust automatically the Remaining Estimate by deafult.)
 jtrp.tutorial.tab.text.3=You can choose whether the End Time or Duration field should be active by default.<br/><br/>You can set the default value of the Start Time.
 
