change user pickers to bais jira user picker.

--- a/src/main/resources/i18n/jtrp.properties
+++ b/src/main/resources/i18n/jtrp.properties
@@ -236,7 +236,8 @@ jtrp.tutorial.tab.text.1=Now your Administrator can configure the plugin to disp
 jtrp.tutorial.tab.text.2=You can now choose in Timetracker settings whether you want to display additional Remaining Estimate adjusting options. (The Timetracker Adjust automatically the Remaining Estimate by deafult.)
 jtrp.tutorial.tab.text.3=You can choose whether the End Time or Duration field should be active by default.<br/><br/>You can set the default value of the Start Time.
 
-
 ##Missings Days report
 plugin.missings.hours=Hours
 plugin.missings.dates=Dates
+
+jtrp.picker.suggested.user=Suggested Users
