--- a/src/main/resources/i18n/jtrp_hu.properties
+++ b/src/main/resources/i18n/jtrp_hu.properties
@@ -239,3 +239,5 @@ jtrp.tutorial.tab.text.3=You can choose whether the End Time or Duration field s
 ##Missings Days report
 plugin.missings.hours=Hours
 plugin.missings.dates=Dates
+
+jtrp.picker.suggested.user=Suggested Users
