Fix seconds in time problem in Timetracker.

--- a/src/main/resources/i18n/jttp.properties
+++ b/src/main/resources/i18n/jttp.properties
@@ -160,6 +160,7 @@ plugin.invalid_durationTime= Invalid Duration Time!
 plugin.invalid_timeInterval= Invalid Time Interval!
 plugin.missing_issue= Missing Issue Parameter!
 plugin.invalid_issue= Wrong Issue:
+plugin.invalid_timeContainsSecond=The configured time format contains seconds, therefore, the End Time field cannot be used. Use the Duration field instead or change time format in Look and Feel settings.
 plugin.date_parse= Can''t parse date:
 plugin.nopermission_issue= You don''t have permission to the issue:
 plugin.worklog.create.fail= Unsuccessful worklog creation.
