--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -160,6 +160,7 @@ plugin.invalid_durationTime= \u00c9rv\u00e9nytelen id\u0151tartam!
 plugin.invalid_timeInterval= \u00c9rv\u00e9nytelen id\u0151intervallum!
 plugin.missing_issue= Hi\u00e1nyz\u00f3 issue param\u00e9ter!
 plugin.invalid_issue= Rossz Issue:
+plugin.invalid_timeContainsSecond=A be\u00e1ll\u00edtott id\u0151 form\u00e1tum m\u00e1sodperceket tartalmaz, ez\u00e9rt a v\u00e9gz\u00e9si id\u0151 mez\u0151 nem haszn\u00e1lhat\u00f3. Haszn\u00e1lja az id\u0151tartam mez\u0151t vagy v\u00e1ltoztassa meg a Look ad feel be\u00e1ll\u00edt\u00e1sokat.
 plugin.date_parse= Sikertelen d\u00e1tum \u00e1talak\u00edt\u00e1s:
 plugin.nopermission_issue= Nincs jogosults\u00e1god az issue-hoz:
 plugin.worklog.create.fail= Sikertelen worklog k\u00e9sz\u00edt\u00e9s.
